--- a/settings.json
+++ b/settings.json
@@ -10,9 +10,9 @@
 	"ownerNumber": "6288271771627",
 	"ownerNumberr": "6288271771627",
 	"cr": "@FadhilGz",
-	"ownername": "Fadhil Gz",
-	"botname":"Fadhil Botz",
+	"ownername": "MH STORE",
+	"botname":"MH BOTZ",
 	"thumb":"thumbnail_1.jpg",
 	"fakethumb":"thumbnail_1.jpg", 
-	"fake": " 「  FadhilBotz  」\nCreated By @FadhilGz"
+	"fake": " 「  MHBOTZ  」\nCreated By @MHGz"
 }
